# beaver2d

./: Cargo.toml  README.md
beaver2d-core/: Cargo.toml
beaver2d-core/src/: canvas.rs  lib.rs  version.rs
beaver2d-core/tests/: loadcanvas.rs  uniqueid.rs
beaver2d-gui/: Cargo.toml
beaver2d-gui/src/: main.rs
