[package]
name = "beaver2d-gui"
version = "0.1.0"
edition = "2021"
license = "GPLv3"
keywords = ["animation", "vector-graphics", "2d"]

[dependencies]
beaver2d-core = {path = "../beaver2d-core"}
eframe = "0.34.1"
egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "0.25", features = ["png"] }