[package]
name = "beaver2d-gui"
version = "0.1.0"
edition = "2024"
license = "GPLv3"
keywords = ["animation", "vector-graphics", "2d"]

[dependencies]
beaver2d-core = {path = "../beaver2d-core"}
egui = "0.34.1"
eframe = { version = "0.34.1", features = ["persistence"] }
image = { version = "0.25", features = ["png"] }